# clipboard

./: CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.arm  Dockerfile.arm64  Dockerfile.x86_64  LICENSE  README.md
.github/workflows/: ci.yml  test.yml
doc/: cb.1  cb.md
scripts/: install_xcb.sh
src/: main.rs
